--- a/jmayer.example.aspreact.client/package.json
+++ b/jmayer.example.aspreact.client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "primeflex": "^3.3.1",
+    "primereact": "^10.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
