--- a/jmayer.example.aspreact.client/package.json
+++ b/jmayer.example.aspreact.client/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "globals": "^16.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router": "^7.6.2",
+    "react-router-dom": "^7.6.2",
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -25,8 +28,6 @@
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "eslint-plugin-react-refresh": "^0.4.9"
   }
 }
