--- a/jmayer.example.aspreact.client/package.json
+++ b/jmayer.example.aspreact.client/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "globals": "^16.2.0",
-    "primeflex": "^3.3.1",
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-is": "^19.1.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "vite": "^6.3.5"
