--- a/JMayer.Example.ASPReact.Server/JMayer.Example.ASPReact.Server.csproj
+++ b/JMayer.Example.ASPReact.Server/JMayer.Example.ASPReact.Server.csproj
@@ -8,6 +8,9 @@
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
     <SpaProxyServerUrl>https://localhost:5173</SpaProxyServerUrl>
     <Version>9.0.0</Version>
+    <Authors>jmayer913</Authors>
+    <Company>jmayer913</Company>
+    <RepositoryUrl>https://github.com/jmayer913/JMayer-Example-ASPReact</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
